// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkPill renders a NetworkPill with border 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "#209853",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0E1524",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders a NetworkPill without image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0E1524",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders an InlineNetworkPill 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.2}
    style={
      Array [
        Object {
          "color": "#0E1524",
          "display": "flex",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 12,
          "lineHeight": 17,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;
